<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_settings">Settings</string>
    <string name="preference_sort_key" translatable="false">sort</string>
    <string name="preference_sort_title">Sort By</string>
    <string name="preference_sort_value_popular" translatable="false">popular</string>
    <string name="preference_sort_value_rate" translatable="false">rate</string>
    <string name="preference_sort_label_popular">Popularity</string>
    <string name="preference_sort_label_rate">Rate</string>
    <string name="preference_sort_label_favorite">Favorites</string>
    <string name="preference_sort_value_favorite">favorites</string>
    <string name="movie_poster">Movie poster showing</string>
    <string name="ContentDescription_MoviePoster">Movie poster</string>
    <string name="title_label">Title</string>
    <string name="vote_average_label">Average Vote</string>
    <string name="release_date_label">Release Date</string>
    <string name="synopsis_label">Synopsis</string>
    <string name="synopsis_sample">Believing they have left behind shadowy figures from their past, newlyweds Christian and Ana fully embrace an inextricable connection and shared life of luxury. But just as she steps into her role as Mrs. Grey and he relaxes into an unfamiliar stability, new threats could jeopardize their happy ending before it even begins.</string>
</resources>